fixed blog page overflow

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -306,14 +306,6 @@ footer {
     height: auto;
     background-color: #fff;
     box-shadow: 0 3px 5px rgba(0,0,0,0.3);
-
-    img {
-      position: absolute;
-      width: 200px;
-      height: auto;
-      top: -40px;
-      right: -85px;
-    }
   }
 }
 
